# uuid_to_pokemon.rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
benches/: benches.rs
cli/: Cargo.toml
lib/: Cargo.toml
lib/benches/: benches.rs
lib/src/: lib.rs  pokemons.rs
src/: lib.rs
