[package]
name = "uuid_to_pokemon"
version = "0.1.2"
authors = ["Julien Durillon <julien.durillon@clever-cloud.com"]
documentation = "https://docs.rs/uuid_to_pokemon"
description = "Translates a UUID to a qualified pokemon name."
license = "MIT"

[dependencies]
uuid = {version = "0.5", features = ["v4"]}
